--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
 
 .table-body .table-row .row-item{
   width: 200px;
+  height: 40px;
 }
 
 .match-table{
@@ -28,7 +29,7 @@
 }
 
 .table-body .row-item{
-  line-height: 30px;
+  line-height: 40px;
 }
 
 .table-row:nth-child(even) .row-item{
@@ -44,4 +45,15 @@
   border-width: 0px 1px 1px 1px;
   border-radius: 0 0 5px 5px;
   overflow: hidden;
+}
+
+.blue-font{
+  color: deepskyblue;
+}
+
+.ranking-background{
+  background-color: darkgrey;
+  color: white;
+  padding: .5em;
+  line-height: 10px !important;
 }
